--- a/style.css
+++ b/style.css
@@ -11,10 +11,4 @@ h1 {
 	font-size: 160px;
 }
 
-html, body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  background: black url(./images/allskills_bg.png) center center no-repeat;;
-
-}
+img { max-width:100%; max-height:100%; margin:auto; }
